
- Added messages telling about successful actions, e. g. applying or
  canceling a form.

- Made it possible to sort the entities.

- Made 'main adresses and numbers' an entity, so it could be sorted along
  with the other entities.

- Added ability to delete the persons found in a search. User must have the
  administrator role to use this feature as it might be dangerous.

Bug fixes
---------

- When copying a person, the creation dates and modification dates of the
  addresses in the copied person are changed along the person.


Other changes
-------------

- Updated to `Zope Toolkit 1.0`_ for dependent packages.

.. _`Zope Toolkit 1.0`: http://docs.zope.org/zopetoolkit/releases/overview-1.0.html


1.4.0 (2010-08-19)
==================

Features
--------

- Added user preferences to customize the columns displayed in person list.

- Added batching to person list (customizable in the user preferences).

- Each table shows its rows in alternating colors.


Other changes
-------------

- Using `Zope Toolkit 1.0a2`_ instead of managing our own versions of
  dependent packages.

.. _`Zope Toolkit 1.0a2`: http://docs.zope.org/zopetoolkit/releases/overview-1.0a2.html

1.3.0 (2010-03-20)
==================

- Feature: Replaced `Simple single keyword search` by `Keyword search` which
  allows to search for multiple keywords concatenated by `and` or `or`.


1.2.0 (2010-02-06)
==================

- Feature: Added ability to clone a person.


1.1.2 (2010-01-27)
==================

- Search result table displayed only 50 entries. Now it displays all
  search results ordered by name.


1.1.1 (2010-01-25)
==================

- Fixed version of `icemac.ab.locales`.


1.1.0 (2010-01-25)
==================

Features
--------

- Added translation to XLS export files.

- Added creator, last modifier and modification date metadata to
  objects.

Bugfixes
--------

- When two users are exporting at the same time this could end in
  broken export files.

- On the person edit form:
