@@ -3,6 +3,7 @@ extends = versions.cfg
 develop = .
 base-parts = site.zcml lxml deploy.ini debug-ajax.ini debug-pdb.ini zope.conf
              app test zodb backup
+             zdaemon.conf zdaemon-debug-ajax.conf zdaemon-debug-pdb.conf
 allow-picked-versions = false
 versions = versions
 find-links += ${buildout:directory}/3rdParty
@@ -21,7 +22,7 @@ initialization = import os
                  os.environ['zope_i18n_allowed_languages'] = 'de,en'
 
 
-# pycountry needs lxml
+# pycountry needs lxml, tests, too
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml==${versions:lxml}
@@ -86,6 +87,29 @@ recipe = buildout_script:template
 template_dir = ${buildout:directory}/profiles
 template = zope.conf.in
 devmode = off
+
+[zdaemon.conf]
+recipe = buildout_script:template
+template_dir = ${buildout:directory}/profiles
+template = zdaemon.conf.in
+ini-file = deploy.ini
+user =
+
+[zdaemon-debug-ajax.conf]
+recipe = buildout_script:template
+template_dir = ${buildout:directory}/profiles
+template = zdaemon.conf.in
+target = zdaemon-debug-ajax.conf
+ini-file = debug-ajax.ini
+user = ${zdaemon.conf:user}
+
+[zdaemon-debug-pdb.conf]
+recipe = buildout_script:template
+template_dir = ${buildout:directory}/profiles
+template = zdaemon.conf.in
+target = zdaemon-debug-pdb.conf
+ini-file = debug-pdb.ini
+user = ${zdaemon.conf:user}
 
 [test-env]
 zope_i18n_compile_mo_files = True
